--- a/Styles/style.css
+++ b/Styles/style.css
@@ -44,7 +44,7 @@ color: var(--color-primary);
 .presentation {
     padding: 5% 13%;
     display: flex;
-    align-items: center;
+    align-items: flex-star;
     justify-content: space-between;
     gap: 82px;
 }
