--- a/Styles/style.css
+++ b/Styles/style.css
@@ -68,7 +68,7 @@ color: var(--color-primary);
 
 .links__presentation {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     gap: 32px;
